@@ -1,3 +1,10 @@
+2008-07-19  Jim Evins  <evins@snaught.com>
+
+	* configure.in:
+	* src/mygal/Makefile.am:
+		Make sure libtool handles library dependencies for mygal
+		properly.
+	
 2008-05-21  Jim Evins  <evins@snaught.com>
 
 	* src/glabels-batch.c: (main):
